A-localhost-WEB/dep-nginx-ingress-1.yaml
# problem fix : https://stackoverflow.com/questions/56723867/kubernetes-nginx-ingress-rabbitmq-management-and-kibana
# helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
# helm repo update
# helm install nginx-ingress ingress-nginx/ingress-nginx --namespace web --set controller.replicaCount=2
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: web
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 80
            path: /     
    - host: rabbitmq.localhost    
      http:
        paths:           
          - pathType: Prefix
            backend:
              service:
                name: rabbitmq-service
                port:
                  number: 15672
            path: /                         
                       
  tls:
    - hosts:
      - localhost
      - rabbitmq.localhost
      secretName: nginx-tls-secret      
# Adding TLS secret and replacing the value is not useful since i generated the secret beforehand
# using : kubectl create secret tls nginx-tls-secret  --key localhost.key --cert localhost.crt -n web      
# --- # TLS Secret
# apiVersion: v1
# kind: Secret
# metadata:
#   name: nginx-tls-secret
#   namespace: web
# type: kubernetes.io/tls
# data:
#   tls.crt: 
#   tls.key: 

           # - rabbitmq.localhost
      # - prometheus.localhost
      # - grafana.localhost     

    # - host: statemetrics.localhost
    #   http:
    #     paths:               
    #       - pathType: Prefix
    #         backend:
    #           service:
    #             name: prometheus-kube-state-metrics
    #             port:
    #               number: 8080
    #         path: /             
    # - host: prometheus.localhost
    #   http:
    #     paths:               
    #       - pathType: Prefix
    #         backend:
    #           service:
    #             name: prometheus-server
    #             port:
    #               number: 9090
    #         path: /  
    # - host: grafana.localhost
    #   http:
    #     paths:               
    #       - pathType: Prefix
    #         backend:
    #           service:
    #             name: prometheus-grafana
    #             port:
    #               number: 80
    #         path: /
