A-localhost-WEB/dep-nginx-ingress-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: grafana.ynovlab.ddns.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              # number: 3000
              name: http
  tls:
    - hosts:
      - ynovlab.ddns.net
      - rabbitmq.ynovlab.ddns.net
      - kibana.ynovlab.ddns.net
      - grafana.ynovlab.ddns.net
      secretName: nginx-tls-secret
